--- a/src/styles.css
+++ b/src/styles.css
@@ -1,4 +1,39 @@
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@600&display=swap");
 .App {
-  font-family: sans-serif;
-  text-align: center;
+  font-family: "Montserrat", sans-serif;
+  max-width: 600px;
+  margin: auto;
+  padding: 2rem;
+}
+
+body {
+  width: 90vw;
+  margin: 0 auto;
+  background-color: #9b9692;
+  color: #3d2653;
+}
+
+button {
+  font-size: 1.3rem;
+  margin-right: 5rem;
+  cursor: pointer;
+  color: #3d2653;
+  background-color: #c9c2bd;
+  border: 2px solid #3d2653;
+  padding: 0.5rem 2rem;
+  font-weight: bolder;
+  border-radius: 0.5rem;
+}
+
+ul {
+  padding-inline-start: 0;
+}
+
+li {
+  list-style: none;
+  padding: 1rem;
+  border: 1px solid #3d2653;
+  width: 70%;
+  margin: 1rem 0rem;
+  border-radius: 0.5rem;
 }
